--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Fuente Inter ahora se sirve self-hosted (public/fonts). Elimina este comentario cuando confirmes que los .woff2 existen. -->
   <title>EduComply: Sistema de Compliance Educativo</title>
   <!-- CSS se importa dentro de index.tsx -->
 </head>
-  <body class="bg-slate-100">
+  <body class="bg-app-gradient text-foreground">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
